--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -29,15 +29,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4d0fd3fe",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import string\n",
+    "\n",
+    "def palindrome(word):\n",
+    "    # Remove spaces and punctuation, and convert to lowercase\n",
+    "    cleaned = ''.join(char.lower() for char in word if char.isalnum())\n",
+    "    return cleaned == cleaned[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1d0bd936",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palindrome(\"Eva, can I see bees in a cave?\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,18 +91,28 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "396c9c08",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
