--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -90,10 +90,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "396c9c08",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parentheses(sequence):\n",
+    "    balance = 0\n",
+    "    for char in sequence:\n",
+    "        if char == '(':\n",
+    "            balance += 1\n",
+    "        elif char == ')':\n",
+    "            balance -= 1\n",
+    "        if balance < 0:\n",
+    "            return False\n",
+    "    return balance == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9dabd024",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parentheses(\"((()))\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ba88912a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parentheses('(blah)()()()')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2a53b9d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parentheses(\"((((((())\")"
+   ]
   }
  ],
  "metadata": {
